--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@ title: Patrick Bezzina
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Patrick!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>This is my firts attempt to create a my own website and blog where I intend to write a bit about myself and to give some information about my research work which I hope you find interesting.</p>
+	
+	<p>You can read about my <a href="/cv">career</a> and a bit about <a href="my private life...</a>
+
+	<p>I love to connect with people so please do send me a connection request via LinkedIn and get in touch with me if you have any comments or feedback about my posts. Any feedback is very much appreciated. Have a look at <a href="https://www.linkedin.com/in/patrickbezzina/"my LinkedIn profile.</a></p> 
 </div><!-- /.blurb -->
