--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 title: Patrick Bezzina
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Patrick!</h1>
-	<p>This is my firts attempt to create a my own website and blog where I intend to write a bit about myself and to give some information about my research work which I hope you find interesting.</p>
+	<h1>Hi there, I'm Patrick Bezzina and welcome to my blog!</h1>
+	<p>This is my first attempt to create a my own website and blog where I intend to write a bit about myself and to give some information about my research work which I hope you find interesting.</p>
 	
-	<p>You can read about my <a href="/cv">career</a> and a bit about <a href="my private life...</a>
+	<p>You can read about my <a href="/cv">career</a> and a bit about <a href="/about">my private life..."</a></p>
 
-	<p>I love to connect with people so please do send me a connection request via LinkedIn and get in touch with me if you have any comments or feedback about my posts. Any feedback is very much appreciated. Have a look at <a href="https://www.linkedin.com/in/patrickbezzina/"my LinkedIn profile.</a></p> 
+	<p>I love to connect with people so please do send me a connection request via LinkedIn and get in touch with me if you have any comments or feedback about my posts. Any feedback is very much appreciated. Have a look at <a href="https://www.linkedin.com/in/patrickbezzina/">my LinkedIn profile.</a></p> 
 </div><!-- /.blurb -->
