--- a/about/index.html
+++ b/about/index.html
@@ -1,15 +1,15 @@
 ---
-layout: post
+layout: default
 title: "About Me"
 ---
 
-A little intro of myself...
+<p>A little intro of myself... </p>
 
-I am a happy husband, father of two, from Malta, a small island in the Mediterranean Sea.
+<p>I am a happy husband and father of two, working and living in Malta, a small island in the Mediterranean Sea.</p>
 
-I have been in the IT industry since 1993 after graduating from the University of Malta.
+<p>I have been in the IT industry since graduating in Mathematics and Computer Science from the University of Malta back in 1993.</p>
 
-Presently I am doing a Masters degree in Artificial Intelligence on a part-time tuition and research basis. My current area of research is portfolio optimization using nature-inspire metaheuristic techniques.
+<p>Presently I am doing a Masters degree in Artificial Intelligence on a part-time tuition and research basis. My current area of research is portfolio optimization using nature-inspire metaheuristic techniques.</p>
 
 
 
