--- a/about/index.html
+++ b/about/index.html
@@ -3,13 +3,11 @@ layout: default
 title: "About Me"
 ---
 
-<p>A little intro of myself... </p>
-
-<p>I am a happy husband and father of two, working and living in Malta, a small island in the Mediterranean Sea.</p>
-
-<p>I have been in the IT industry since graduating in Mathematics and Computer Science from the University of Malta back in 1993.</p>
-
-<p>Presently I am doing a Masters degree in Artificial Intelligence on a part-time tuition and research basis. My current area of research is portfolio optimization using nature-inspire metaheuristic techniques.</p>
-
-
-
+<div class="blurb">
+	<h1>A little intro of myself...</h1>
+  <p>I am a happy husband and father of two, working and living in Malta, a small island in the Mediterranean Sea.</p>
+  
+  <p>I have been in the IT industry since graduating in Mathematics and Computer Science from the University of Malta back in 1993.</p>
+  
+  <p>Presently I am doing a Masters degree in Artificial Intelligence on a part-time tuition and research basis. My current area of research is portfolio optimization using nature-inspire metaheuristic techniques.</p>
+</div>
