--- a/about/index.html
+++ b/about/index.html
@@ -5,9 +5,10 @@ title: "About Me"
 
 <div class="blurb">
 	<h1>A little intro of myself...</h1>
-  <p>I am a happy husband and father of two, working and living in Malta, a small island in the Mediterranean Sea.</p>
+  <p>I am a happy husband and father of two, working and living in Malta, a small island in the Mediterranean Sea. The things I enjoy doing most in life are cycling, trekking, swimming, travelling, meeting new people and of course coding.</p>
   
-  <p>I have been in the IT industry since graduating in Mathematics and Computer Science from the University of Malta back in 1993.</p>
+  <p>I have been in the IT industry since graduating in Mathematics and Computer Science from the University of Malta back in 1993. In 2001 I obtained a Masters degree in Business Administration (MBA) from Maastricht School of Management.</p>
   
-  <p>Presently I am doing a Masters degree in Artificial Intelligence on a part-time tuition and research basis. My current area of research is portfolio optimization using nature-inspire metaheuristic techniques.</p>
+  <p>Last year I decided to enrol on Masters degree in Artificial Intelligence on a part-time tuition and research basis at the University of Malta and I am presently working on my final dissertation. My current area of research is portfolio optimization using nature-inspire metaheuristic techniques.</p>
+	
 </div>
