--- a/cv/index.html
+++ b/cv/index.html
@@ -4,11 +4,13 @@ title: "Resume"
 ---
 
 <div class="blurb">
-	<h1>March 2019 to present - A.I. Researcher|Entrepreneur|Strategic Projects Consultant </h1>
+	<h1>A.I. Researcher, Entrepreneur and Strategic Projects Consultant </h1>
+	<h2>March 2019 to present</h2>
   <p>Helping organisations to identify problems that can be solved using Artificial Intelligence</p>
   
-  <h1>February 2017 to March 2019 - CTO and Head of Technical Services</h1>
-  <p>Provided leadership on IT strategy and project implementation using agile methods.</p>
+  <h1>CTO and Head of Technical Services</h1>
+	<h2>February 2017 to March 2019</h2>
+	<p>Provided leadership on IT strategy and project implementation using agile methods.</p>
   <p>Sprearheaded IT initiatives aimed at minimizing operational waste and maximizing stakeholder value through data insight.</p>
   <p>Advised on GDPR, data privacy, risk management, IT governance and digital transformations.</p>
   
